[tool.poetry]
name = "fdb-ray-clone"
version = "0.1.0"
description = ""
authors = ["Connor Clark <connor.r.clark@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
foundationdb = "^7.1.21"
cloudpickle = "^2.1.0"
pyarrow = "^9.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
mypy = "^0.960"
hypothesis = "^6.54.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
